<resources>
    <string name="app_name">Divent</string>
    <string name="home">Home</string>
    <string name="upcoming">Upcoming</string>
    <string name="finish">Finish</string>
    <string name="finished_event">Finished Events</string>
    <string name="upcoming_event">Upcoming Events</string>
    <string name="selamat_datang_di_divent">Welcome to Divent!</string>
    <string name="registrasi">Register</string>
    <string name="event_banner">Event banner</string>
    <string name="logo">Logo</string>
    <string name="description">Description</string>
    <string name="owner_name_dicoding">Owner name: Dicoding</string>
    <string name="splash_text">Explore and join\na bouch of events\nwith Divent</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="favorite_events">Favorite Events</string>
    <string name="explore_all_your_favorite_events">Explore all your favorite events</string>
    <string name="favorite">Favorite</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="enable_notification">Enable Notification (if ON, default time is 8:00)</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="next_event">Nearest Event</string>
    <string name="set_time">Set Time:</string>
    <string name="settings">Settings</string>
    <string name="change_theme_and_notification_settings">Change theme and notification settings</string>
    <string name="enable_dark_theme">Enable dark theme</string>
</resources>