<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/allItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/margin_start_end"
                android:layout_marginStart="@dimen/margin_start_end"
                android:text="@string/selamat_datang_di_divent"
                android:textSize="24sp"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="@dimen/margin_variation"
                android:id="@+id/tv_upcoming"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                android:layout_marginStart="@dimen/margin_start_end"
                android:text="@string/upcoming_event"
                android:textSize="16sp"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_upcoming_event"
                app:layout_constraintTop_toBottomOf="@id/tv_upcoming"
                android:layout_margin="@dimen/margin_variation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_event"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_upcoming_event"
                android:layout_marginTop="@dimen/margin_variation"
                android:layout_marginStart="@dimen/margin_start_end"
                android:text="@string/finished_event"
                android:textSize="16sp"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                tools:listitem="@layout/item_event"
                android:id="@+id/rv_event"
                app:layout_constraintTop_toBottomOf="@id/tv_event"
                android:layout_margin="@dimen/margin_variation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/loading"
        layout="@layout/loading" />

    <include
        android:id="@+id/no_data"
        layout="@layout/no_data" />
</androidx.constraintlayout.widget.ConstraintLayout>
