<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.content.detail.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            style="@style/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:contentDescription="@string/logo"
            android:text="@string/home"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="68dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/allItems"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_banner"
                style="@style/placeholder_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/event_banner"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginTop="@dimen/margin_variation"
                app:cardBackgroundColor="@color/yellow"
                app:cardCornerRadius="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_banner">

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_end"
                    android:layout_marginTop="@dimen/margin_variation"
                    android:layout_marginEnd="@dimen/margin_start_end"
                    android:layout_marginBottom="@dimen/margin_variation"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck"
                    tools:text="Seminar" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_title"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginTop="@dimen/margin_variation"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:shadowColor="@color/grey"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/cv_category"
                tools:text="Title" />

            <TextView
                android:id="@+id/tv_owner"
                style="@style/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginTop="@dimen/margin_variation"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/owner_name_dicoding"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                tools:ignore="TextContrastCheck"
                tools:layout_editor_absoluteX="20dp" />

            <TextView
                android:id="@+id/tv_summary"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginTop="@dimen/margin_variation"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:gravity="center_vertical"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tv_owner"
                tools:text="Acara ini sepenuhnya GRATIS dan akan diselenggarakan hari Jum'at, 17 Mei 2024 pukul 16.00 - 17.00 WIB Live di YouTube" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_start_end"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:layout_constraintTop_toBottomOf="@id/tv_summary">

                <LinearLayout
                    style="@style/rv_item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/margin_variation"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@id/tv_title">

                        <TextView
                            android:id="@+id/tv_date"
                            style="@style/text2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="8dp"
                            android:gravity="center_vertical"
                            android:maxLines="1"
                            android:textSize="14sp"
                            app:drawableStartCompat="@drawable/icon_date"
                            app:drawableTint="@color/yellow"
                            tools:ignore="TextContrastCheck"
                            tools:text="2024-05-18" />

                        <TextView
                            android:id="@+id/tv_clock"
                            style="@style/text2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_variation"
                            android:drawablePadding="8dp"
                            android:gravity="center_vertical"
                            android:maxLines="1"
                            android:textSize="14sp"
                            app:drawableStartCompat="@drawable/icon_clock"
                            app:drawableTint="@color/yellow"
                            tools:ignore="TextContrastCheck"
                            tools:text="10:00:00" />


                    </LinearLayout>

                    <TextView
                        android:textAlignment="center"
                        android:id="@+id/tv_regis"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/green"
                        android:drawablePadding="8dp"
                        android:gravity="center"
                        android:maxLines="2"
                        android:paddingStart="@dimen/margin_variation"
                        android:paddingEnd="@dimen/margin_variation"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="200\nquota left" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_label_desc"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginTop="@dimen/margin_start_end"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/description"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/cv" />

            <TextView
                android:id="@+id/tv_desc"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginTop="@dimen/margin_variation"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:layout_marginBottom="@dimen/margin_variation"
                android:gravity="center_vertical"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_desc"
                tools:text="Acara ini sepenuhnya GRATIS dan akan diselenggarakan hari Jum'at, 17 Mei 2024 pukul 16.00 - 17.00 WIB Live di YouTube" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/loading"
        layout="@layout/loading" />

    <include
        android:id="@+id/no_data"
        layout="@layout/no_data" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            style="@style/screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt_regis"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/margin_variation"
                android:backgroundTint="@color/green"
                android:gravity="center"
                android:text="@string/registrasi"
                android:textAllCaps="false" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>